--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BINARY CALCULATOR</title>
     <link rel="stylesheet" href="style.css">
-    </style>">
+    </style>
   </head>
   <body>
     <form id="binaryCalc" onsubmit="finalAnswer(); return false">
