Improve some UI for easy to use

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <br />
       <input type="submit" name="binaryVal" class="active"/> <br />
       <span id="finalResult"></span> <br/>
-      <p id="claim">&copy; Designed By Kunal Singh</p>
+      <p id="claim">&lt;/&gt; with ❤️ by Kunal Singh</p>
     </form>
     <script  src="script.js"></script>
   </body>
